--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="demo/demo.html">demo</a>
+    <a href="demo/demo.html">demo</a><br>
     <a href="lab1/lab1.html">lab1</a>
 </body>
 </html>
